--- a/educattion.html
+++ b/educattion.html
@@ -16,7 +16,7 @@
 		
 		<li><a href="sts.html">MY PAGE</a></li>
         <li><a href="simplepage.html">HOME</a></li>
-        <li><a href="simplepage.html">EDUCATION</a></li>
+        <li><a href="index.html">EDUCATION</a></li>
         <li><a href="skills.html">SKILLS</a></li>
         <li><a href="cont.html">CONTACT</a></li>
         </ul>
