--- a/sts.html
+++ b/sts.html
@@ -21,8 +21,8 @@
         <li><a href="cont.html">CONTACT</a></li>
         </ul>
 
-
-</div>
+	      <button><a href="simplepage.html" back</button>
+</div><>
 
 <div class="content">
 <table bgcolor="white" border="3px solid 124566" width="100%">
