--- a/sts.html
+++ b/sts.html
@@ -21,7 +21,7 @@
         <li><a href="cont.html">CONTACT</a></li>
         </ul>
 
-	      <button><a href="simplepage.html" back</button>
+	      <button><a href="simplepage.html"></a> back</button>
 </div><>
 
 <div class="content">
