--- a/sts.html
+++ b/sts.html
@@ -15,13 +15,13 @@
 	<ul >
 		
 		<li><a href="simplepage.html">MY PAGE</a></li>
-        <li><a href="simplepage.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="educattion.html">EDUCATION</a></li>
         <li><a href="skills.html">SKILLS</a></li>
         <li><a href="cont.html">CONTACT</a></li>
         </ul>
 
-	      <button><a href="simplepage.html"></a> back</button>
+	      
 </div><>
 
 <div class="content">
