--- a/cont.html
+++ b/cont.html
@@ -14,10 +14,11 @@
 	<ul >
 		
 	
-        <li><a href="simplepage.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
+	<li><a href="sts.html">MY PAGE</a></li>	
         <li><a href="educattion.html">EDUCATION</a></li>
         <li><a href="skills.html">SKILLS</a></li>
-        <li><a href="simplepage.html">CONTACT</a></li>
+        <li><a href="index.html">CONTACT</a></li>
         </ul>
 </div>
 
