--- a/skills.html
+++ b/skills.html
@@ -14,9 +14,9 @@
 	<ul >
 		
 	
-        <li><a href="simplepage.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="education.html">EDUCATION</a></li>
-        <li><a href="simplepage.html">SKILLS</a></li>
+        <li><a href="index.html">SKILLS</a></li>
         <li><a href="cont.html">CONTACT</a></li>
         </ul>
 </div>
