--- a/sts.html
+++ b/sts.html
@@ -14,7 +14,7 @@
   
 	<ul >
 		
-		<li><a href="simplepage.html">MY PAGE</a></li>
+		<li><a href="index.html">MY PAGE</a></li>
         <li><a href="index.html">HOME</a></li>
         <li><a href="educattion.html">EDUCATION</a></li>
         <li><a href="skills.html">SKILLS</a></li>
